5-EC2.tf


data "aws_ami" "al2023" {
  most_recent = true
  owners      = var.ami_owners

  filter {
    name   = "name"
    values = ["al2023-ami-2023*-x86_64"]
  }

  filter {
    name   = "state"
    values = ["available"]
  }
}

# This is the old version but do Jenkins pipelines it rejected it, Now i will check out this new block
/* locals {
  startup_b64 = base64encode(file("${path.module}/startup.sh"))
} */
locals {
  startup_b64 = base64encode(file("${path.module}/scripts/startup.sh"))
}


resource "aws_instance" "lab_ec2_app" {
  ami           = data.aws_ami.al2023.id
  instance_type = var.instance_type
  /* key_name             = var.key_name */
  iam_instance_profile = aws_iam_instance_profile.lab_ec2_profile.name


  vpc_security_group_ids      = [aws_security_group.sg_ec2_lab.id]
  subnet_id                   = aws_subnet.private_subnet["private_a"].id
  associate_public_ip_address = false

  user_data_replace_on_change = true

  tags = merge(
    { Name = var.instance_name },
    var.extra_tags
  )

  # inside your aws_instance resource:
  user_data = <<-EOF
#!/bin/bash
set -euxo pipefail

printf '%s' '${local.startup_b64}' | base64 -d > /usr/local/bin/startup.sh
chmod +x /usr/local/bin/startup.sh

/usr/local/bin/startup.sh > /var/log/startup.log 2>&1
EOF

}

output "ec2_instance_id" {
  description = "EC2 instance ID for the lab app server"
  value       = aws_instance.lab_ec2_app.id
}
output "selected_ami_id" {
  value = data.aws_ami.al2023.id
}

output "selected_ami_name" {
  value = data.aws_ami.al2023.name
}

/* output "lab_ec2_instance_profile_name" {
  value = aws_iam_instance_profile.lab_ec2_profile.name
} */
